# dtmaster-ingest-douglasleal

./: .readthedocs.yaml  README.md  README.txt  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: pipeline.yml  poetry-publish.yml  python-package.yml  python-publish.yml
docs/: index.md
docs/api/: input.md
dtmaster_ingest_douglasleal/: input.py
src/: main.py
tests/: test_input.py  teste_demo.py
