[tool.poetry]
name = "dtmaster-ingest-douglasleal"
version = "0.1.0"
description = ""
authors = ["Leal <douglas.sleal@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.4.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
blue = "^0.9.1"
isort = "^5.11.4"
taskipy = "^1.10.3"
pyspark = "^3.5.1"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.0.5"
mkdocstrings = "^0.19.1"
mkdocstrings-python = "^0.8.3"
mkdocs-macros-plugin = "^0.7.0"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=dtmaster_ingest_douglasleal -vv"
post_test = "coverage html"